m7-kubernetes/a05/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  labels:
    app: apache
    assignment: "5"
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
