m7-kubernetes/a05/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-apache-ingress
  labels:
    app: multi-service
    assignment: "5"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /nginx(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /apache(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: apache-service
            port:
              number: 80
